Atualização do progresso

--- a/metodos-de-treino-baseados-em-arvore.qmd
+++ b/metodos-de-treino-baseados-em-arvore.qmd
@@ -8,7 +8,6 @@
 }
 </style>
 ```
-
 # Métodos de Treino Baseados em Árvore
 
 Neste capítulo será estudado de forma mais aprofundada modelos de treinamento baseados em árvores, os quais são simples para interpretação, como: árvores de decisão e regressão, florestas aleatórias, adaboost, entre outros. O objetivo é entender o funcionamento dos mesmos, assim como os critérios que utilizam para classificarem as amostras.
@@ -306,18 +305,15 @@ Então o nó considerado será da forma "Publicidade para a TV \< 66,95?".
 
 ![](images/ArvReg2.png){fig-align="center"}
 
-
-O valor de 8,9 corresponde ao resultado da média dos valores das vendas para todos os produtos cuja publicidade foi menor do que 66,95. Então a árvore prevê esse valor de vendas para o produto que obteve uma publicidade para a TV < 66,95. O valor de 15,77 é o resultado da média dos valores das vendas para todos os produtos cuja publicidade foi maior do que 66,95. Novamente serão obtidos os resíduos dessa predição e eles serão somados.
+O valor de 8,9 corresponde ao resultado da média dos valores das vendas para todos os produtos cuja publicidade foi menor do que 66,95. Então a árvore prevê esse valor de vendas para o produto que obteve uma publicidade para a TV \< 66,95. O valor de 15,77 é o resultado da média dos valores das vendas para todos os produtos cuja publicidade foi maior do que 66,95. Novamente serão obtidos os resíduos dessa predição e eles serão somados.
 
 Então o algoritmo irá para o próximo separador e irá calcular a soma dos quadrados dos resíduos da predição. Isso ocorre sucessivamente até acabarem todos os separadores possíveis para a árvore. O separador vencedor (aquele que irá para o nó raiz) é aquele com a menor soma dos quadrados dos resíduos.
 
 A construção dos próximos nós se dá pela mesma forma que a do nó raiz. O processo de construção da árvore termina quando:
 
+-   Atingimos um número mínimo de observações em uma folha (usualmente é utilizado 20 observações). Não continuamos a divisão após esse número mínimo pois corremos o risco de criar uma árvore sobreajustada à amostra dada;
 
-- Atingimos um número mínimo de observações em uma folha (usualmente é utilizado 20 observações). Não continuamos a divisão após esse número mínimo pois corremos o risco de criar uma árvore sobreajustada à amostra dada;
-
-- Quando o ganho ao aumentar a árvore é muito pequeno.
-
+-   Quando o ganho ao aumentar a árvore é muito pequeno.
 
 Agora vamos para o caso em que tenhamos mais de uma variável preditiva nos dados. Vamos considerar agora que queremos prever as vendas do produto baseado em seus orçamentos de publicidade para TV, rádio e jornal.
 
@@ -325,52 +321,435 @@ Assim como anteriormente, começamos usando o orçamento para a TV para prever a
 
 Para os próximos nós o processo de construção também é equivalente ao anterior, exceto que agora nós comparamos a menor soma dos quadrados dos resíduos de cada preditor. E, novamente, quando uma folha atinge um número mínimo de observações, a árvore é finalizada.
 
-
-
 ### Construindo árvores com o [rpart]{.red-text} e [rpart.plot]{.red-text}
-
 
 Vamos construir árvores com o comando rpart(). Como argumento da função nós passamos:
 
-
-- A variável de interesse a ser prevista em função das variáveis preditoras;
-- A base de dados onde as variáveis se encontram.
-
+-   A variável de interesse a ser prevista em função das variáveis preditoras;
+-   A base de dados onde as variáveis se encontram.
 
 Vamos utilizar a base de dados referentes ao primeiro exemplo dado de construção de uma árvore, onde queríamos prever se um indivíduo possui doença cardíaca baseado em características dele.
-
 
 ```{r}
 library(rpart)
 heart_arvore = rpart(HeartDisease~., data = base)
 ```
 
-
 Agora vamos plotar a árvore com o comando rpart.plot().
-
-
 
 ```{r}
 library(rpart.plot)
 rpart.plot(heart_arvore)
 ```
 
+Observe que a árvore ficou "vazia". O que ela quer dizer com isso é: assuma "Não" sempre para o indivíduo possuir doença cardíaca, e acerte com precisão de 78%. Isso ocorre devido aos valores iniciais do comando rpart.control(), que ajusta os parâmetros da função rpart(). Os principais parâmetros do rpart.control são:
 
-Observe que a árvore ficou “vazia”. O que ela quer dizer com isso é: assuma “Não” sempre para o indivíduo possuir doença cardíaca, e acerte com precisão de 78%. Isso ocorre devido aos valores iniciais do comando rpart.control(), que ajusta os parâmetros da função rpart(). Os principais parâmetros do rpart.control são:
+-   minsplit: o número mínimo de observações que devem existir em um nó para que uma divisão seja tentada. Padrão: minsplit = 20;
+
+-   minbucket: o número mínimo de observações em qualquer folha. Padrão: minbucket = minsplit/3;
+
+-   cp (complexity parameter): o mínimo de ganho de ajuste que devemos ter em cada divisão. O principal papel desse parâmetro é economizar tempo de computação removendo as divisões que não valem a pena. Padrão: cp = 0,01;
+
+-   maxdepth: profundidade máxima da árvore (a profundidade da raiz é zero). Não pode ser maior que 30.
+
+**Ex. 1:** Vamos ajustar os parâmetros da árvore e construí-la novamente. Vamos determinar que a profundidade da árvore seja 2, que 0 seja o número mínimo de observações em um nó e que ela seja construída mesmo que não haja ganhos em mais divisões.
+
+```{r}
+controle = rpart.control(minsplit=0, cp = -1, maxdepth = 2)
+heart_arvore = rpart(HeartDisease~., data = base, control = controle)
+rpart.plot(heart_arvore)
+```
+
+Note que o nó raiz é exatamente aquele que calculamos como o mais puro, o "Thal = Reversable", que é equivalente a "Thal = Fixed ou Normal". Os nós adjacentes também foram o que obtivemos anteriormente como os mais puros.
+
+Cada saída do comando rpart.plot() tem um significado específico:
+
+1.  A primeira saída é a classe estimada pela árvore para as amostras que se encontram naquele nó.
+
+![](images/rpart1.png){fig-align="center"}
+
+2.  A segunda saída é a proporção de indivíduos na classe contrária àquela estimada na primeira saída.
+
+3.  A terceira saída é a porcentagem da amostra que se encontra no atual nó.
+
+![](images/rpart3.png){fig-align="center"}
+
+**Ex. 2:** Vamos agora constuir a árvore mais completa possível, ou seja, uma árvore sobreajustada à amostra, sem restrições em sua profundidade máxima.
+
+```{r}
+controle = rpart.control(minsplit=0, cp = -1)
+heart_arvore = rpart(HeartDisease~., data = base, control = controle)
+rpart.plot(heart_arvore)
+```
+
+**Ex. 3:** Vamos agora considerar 10 como o número mínimo de observações em um nó e 3 como a profundidade máxima da árvore.
+
+Agora podemos levantar a seguinte questão: como avaliar a precisão do modelo construído? Nesse exemplo nós utilizamos toda a amostra para construir a árvore, apenas para explicar o funcionamente do [rpart]{.red-text}, então não temos uma amostra teste para verificar o quão bom é o modelo. Então para isso teríamos que primeiramente dividir a amostra em treino e teste, depois criar o modelo com a amostra treino e em seguida aplicá-lo na amostra teste, e então, por último, poderíamos utilizar a função confusionMatrix() para obtermos não só a precisão como outras medidas avaliativas do modelo, além, é claro, da matriz de confusão. No tópico abaixo essas etapas serão construídas detalhadamente.
+
+### Construindo árvores com [train]{.red-text}
+
+Podemos utilizar árvores de decisão/regressão como um método de treinamento para os dados através da função train(). Vamos fazer isso utilizando a base de dados College. Este banco possui informações sobre 777 diferentes universidades e faculdades dos EUA. Ela apresenta algumas variáveis como: Apps - número de pedidos recebidos para ingresso, Room.Board - custos de acomodação e alimentação, Books - custos estimados de livros, PhD - quantidade de professores com doutorado, entre outras, e nossa variável de interesse Private, que indica se a universidade é privada ou pública.
+
+```{r}
+library(readr)
+library(dplyr)
+college = read_csv("College.csv")
+college = college[,-1]
+head(college)
+```
+
+Vamos, primeiramente, separar a amostra em treino e teste.
+
+```{r}
+library(caret)
+set.seed(100)
+noTreino = createDataPartition(y = college$Private, p = 0.7, list = F)
+treino = college[noTreino,]
+teste = college[-noTreino,]
+```
+
+Vamos treinar o modelo pelo método de árvores de decisão. Fazemos isso através do argumento "method = rpart" da função train().
+
+```{r}
+set.seed(100)
+modelo = caret::train(Private~., method = "rpart", data = treino)
+modelo
+```
+
+Observe que através do train() são testados alguns valores para o cp (complexity parameter) e é eleito aquele com a maior taxa de acurácia. Nesse caso, o cp utilizado será o de aproximadamente 0,0436. Vamos aplicar o modelo no conjunto teste.
+
+```{r}
+predicao = predict(modelo, teste)
+
+# Transformando em fator para depois construirmos a matriz de confusão:
+teste$Private = as.factor(teste$Private)
+
+# Avaliando o modelo utilizando a matriz de confusão:
+confusionMatrix(predicao, teste$Private)
+```
+
+Obtivemos uma acurácia de 0,8922, o que é razoável para um modelo que utiliza árvores.
+
+```{r}
+# Desenhando a árvore:
+rpart.plot(modelo$finalModel)
+```
+
+A limitação de utilizar as árvores através do train() é que o único parâmetro da árvore que pode ser alterado é o cp (\*complexity parameter).
+
+```{r}
+modelLookup("rpart")
+```
+
+Para alterarmos o seu valor utilizamos o comando expand.grid().
+
+```{r}
+controle = expand.grid(.cp = 0.0001)
+modelo = caret::train(Private~., method = "rpart", data = treino, tuneGrid = controle)
+modelo
+```
+
+Note que com esse valor de cp a árvore fica mais profunda, pois estamos diminuindo o mínimo de ganho de ajuste que devemos ter em cada divisão.
+
+```{r}
+rpart.plot(modelo$finalModel)
+```
+
+## Florestas Aleatórias
+
+As árvores de decisão possuem uma estrutura de fácil compreensão, o que faz com que ela seja bastante utilizada devido a sua boa aparência e interpretação intuitíva. Mas elas possuem uma limitação, o \[sobreajuste\], sendo assim, elas não são muito eficientes com novas amostras. O que fazer então?
+
+As **Florestas Aleatórias** (*Random Forest*) se utilizam de várias árvores de decisão, combinando a simplicidade das árvores com a flexibilidade de um método sem sobreajuste, aumentando assim a precisão do preditor.
+
+Vamos construir uma floresta aleatória usando a base de dados [balloons]{.red-text}.
+
+```{r}
+balloons = readr::read_csv("balloons.csv")
+balloons$inflated = as.factor(balloons$inflated)
+str(balloons)
+```
+
+Com base na cor do balão, o tamanho dele, se ele é elástico ou não e se quem o está enchendo é uma criança ou um adulto, queremos predizer se o balão vai encher ou não. Portanto, nossa variável de interesse é [Inflated]{.red-text} e queremos construir um classificador.
+
+A primeira coisa que precisamos fazer é criar uma nova amostra do mesmo tamanho da original utilizando \[bootstrap\].
+
+```{r}
+set.seed(33)
+boot1 = caret::createResample(y=balloons$inflated, times=1, list=F)
+NovaAmostra1 = balloons[boot1,]
+Out_of_bag = balloons[-boot1,]
+```
+
+Todas as observações que não forem sorteadas vão entrar no "Out-of-Bag". Temos 4 variáveis fora a de interesse, vamos sortear 2 variáveis para construir o primeiro nó da nossa árvore.
+
+```{r}
+set.seed(413)
+sample(1:4, 2)
+```
+
+Vamos calcular o índice Gini para essas duas variáveis.
+
+```{r}
+#calculando o indice gini para a variável tamanho
+table(NovaAmostra1$size, NovaAmostra1$inflated)
+```
+
+```{r}
+(gini.size = (1-(7/14)^2-(7/14)^2)*(14/20) + (1-(4/6)^2-(2/6)^2)*(6/20))
+```
+
+```{r}
+#calculando o indice gini para a variável idade
+table(NovaAmostra1$age, NovaAmostra1$inflated)
+```
+
+```{r}
+(gini.age = (1-(5/14)^2-(9/14)^2)*(14/20) + (1-(6/6)^2-(0/6)^2)*(6/20))
+```
+
+A variável idade tem um grau de impureza menor, então ela será a raiz da árvore.
+
+![](images/floresta1.jpeg){fig-align="center"}
+
+Agora das variáveis que ainda não foram usadas, sorteamos mais duas para continuar a árvore.
+
+```{r}
+set.seed(443)
+sample(1:3, 2)
+```
+
+```{r}
+library(dplyr)
+NovaAmostra1 = filter(NovaAmostra1, age=="ADULT") 
+#calculando o indice gini para a variável tamanho
+table(NovaAmostra1$size, NovaAmostra1$inflated)
+```
+
+```{r}
+(gini.size = (1-(4/11)^2-(7/11)^2)*(11/14) + (1-(1/3)^2-(2/3)^2)*(3/14))
+```
+
+```{r}
+#calculando o indice gini para a variável act
+table(NovaAmostra1$act, NovaAmostra1$inflated)
+```
+
+```{r}
+(gini.act = (1-(5/5)^2-(0/5)^2)*(5/14) + (1-(0/9)^2-(9/9)^2)*(9/14))
+```
+
+Como a variável act tem o menor grau de impureza, ela será o próximo nó.
+
+![](images/floresta2.jpeg){fig-align="center"}
+
+Assim, temos nossa primeira árvore de decisão.
+
+![](images/floresta3.jpeg){fig-align="center"}
+
+A floresta aleatória pode ser utilizada tanto em classificadores como em regressores. A diferença é que em regressores, utilizamos árvores de regressão no lugar de árvores de classificação.
+
+Em seguida vamos construir várias árvores da mesma maneira que a anterior. Para nosso exemplo vamos construir apenas 4 árvores, mas em geral vamos fazer bem mais que isso.
+
+Temos então nossas 4 árvores construidas.
+
+![](images/floresta4.jpeg){fig-align="center"}
+
+![](images/floresta5.jpeg){fig-align="center"}
+
+Para classificar uma nova amostra, devemos passar ela por todas as árvores construidas e rotular a amostra pela categoria resultada mais vezes.
+
+O método de usar bootstrap para criar novas amostras e votos para a tomada de decisão é chamado de **Bagging** (*B*ootstrap+**agg**regate).
+
+As observações de cada amostra que não entraram na construção de cada árvore estão contidas [Out of Bag]{.red-text}. Essas observações servirão para avaliar nosso preditor.
+
+```{r}
+Out_of_bag = balloons[c(2,4,12,13,15,18,20,
+                        1,2,3,5,10,
+                        2,4,12,13,15,18,20,
+                        2,3,11,13,14,16,19),]
+knitr::kable(Out_of_bag)
+```
+
+Para avaliar, é preciso passar cada uma das observações do [Out of Bag]{.red-text} por todas as árvores e a predição será feita por votos também. Ao fazer isso, observamos uma precisão de 86%.
+
+A proporção de amostras do Out-of-bag que foram incorretamente classificadas é chamada *Out-of-bag-error*
+
+Agora que sabemos avaliar o modelo, podemos comparar florestas aleatórias construídas com 2 variáveis com as construídas com 3 e outras diferentes configurações. Tipicamente, começamos usando o quadrado do número de variáveis da base e tentamos algumas quantidades abaixo e acima.
+
+### Construindo uma floresta com o randomForest()
+
+O pacote **randomForest** possui as ferramentas adequadas para a criação de uma floresta aleatória. Vamos construir uma floresta com 20 árvores utilizando a base [balloons]{.red-text}.
+
+É importante observar se as váriaveis categóricas estão na classe de fatores.
+
+```{r}
+balloons = readr::read_csv("balloons.csv")
+# tratando todas as variaveis 
+balloons = dplyr::mutate_if(balloons, is.character, as.factor)
+balloons$inflated = as.factor(balloons$inflated)
+# construindo floresta com 20 arvores
+library(randomForest)
+set.seed(23)
+modelo = randomForest(inflated ~ ., data=balloons, ntree=20)
+```
+
+Agora, vamos avaliar a precisão do modelo.
+
+```{r}
+# avaliando o modelo
+modelo
+```
+
+Note que foram construídas 20 árvores utilizando 2 variáveis a cada vez. Essa quantidade de variáveis pode ser alterada usando o argumento **mtry=** dentro do randomForest.
+
+Podemos ver que a precisão do nosso modelo é de 19/20, ou seja, 95%. Qual seria a precisão se fosse feito apenas uma árvore?
+
+```{r}
+balloons = readr::read_csv("balloons.csv")
+# tratando todas as variaveis 
+balloons = dplyr::mutate_if(balloons, is.character, as.factor)
+balloons$Inflated = as.factor(balloons$Inflated)
+# separando amostras teste/treino
+set.seed(45)
+inTrain = caret::createDataPartition(balloons$Inflated,p=0.5,list=F)
+treino = balloons[inTrain,]
+teste = balloons[-inTrain,]
+# treinando o modelo
+controle = rpart::rpart.control(minsplit=0, cp = 0, maxdepth = 1)
+set.seed(342)
+modelo = rpart::rpart(Inflated~., data=treino, control = controle)
+# aplicando o modelo no teste
+predicao = predict(modelo,teste, type="vector")
+predicao = factor(predicao, labels = c(F, T))
+# avaliando o erro na amostra treino
+confusionMatrix(teste$Inflated, predicao)
+```
+
+Note que nessa árvore, nosso modelo teve uma precisão de 80%. Bem menor do que o modelo de florestas.
+
+Agora, observe que construimos uma floresta com 20 árvores. O que acontece com o erro do modelo conforme acrescentamos mais árvores?
+
+Vamos avaliar o comportamento do erro conforme acrescentamos mais árvores à floresta. Para isso, utilizaremos a base de dados **spam** para melhor vizualização
+
+```{r}
+# chamando a base
+library(kernlab)
+data("spam")
+# construindo floresta com 20 arvores
+library(randomForest)
+set.seed(23)
+modelo = randomForest(type ~ ., data=spam, ntree=20)
+```
+
+```{r}
+# observando o comportamento do erro em 20 árvores
+erro_OOB <- data.frame(
+  Arvores = rep(1:nrow(modelo$err.rate), times=2),
+  Type = rep(c("spam", "nonspam"), each=nrow(modelo$err.rate)),
+  Erro = c(modelo$err.rate[,"spam"], modelo$err.rate[,"nonspam"]))
+
+ggplot(data=erro_OOB, aes(x=Arvores, y=Erro)) +
+  geom_line(aes(color=Type),size=1.1) +
+  scale_colour_discrete(name = "Tipo",
+                         breaks = c("nonspam", "spam"),
+                         labels = c("Não Spam", "Spam"))
+```
 
 
-- minsplit: o número mínimo de observações que devem existir em um nó para que uma divisão seja tentada. Padrão: minsplit = 20;
 
-- minbucket: o número mínimo de observações em qualquer folha. Padrão: minbucket = minsplit/3;
+```{r}
+# construindo floresta com 50 arvores
+set.seed(23)
+modelo = randomForest(type ~ ., data=spam, ntree=50)
+# observando o comportamento do erro em 50 árvores
+erro_OOB <- data.frame(
+  Arvores=rep(1:nrow(modelo$err.rate), times=2),
+  Type=rep(c("spam", "nonspam"), each=nrow(modelo$err.rate)),
+  Erro=c(modelo$err.rate[,"spam"],
+          modelo$err.rate[,"nonspam"]))
 
-- cp (complexity parameter): o mínimo de ganho de ajuste que devemos ter em cada divisão. O principal papel desse parâmetro é economizar tempo de computação removendo as divisões que não valem a pena. Padrão: cp = 0,01;
+ggplot(data=erro_OOB, aes(x=Arvores, y=Erro)) +
+  geom_line(aes(color=Type),size=1.1)+
+  scale_colour_discrete(name = "Tipo",
+                         breaks = c("nonspam", "spam"),
+                         labels = c("Não Spam", "Spam"))
+```
 
-- maxdepth: profundidade máxima da árvore (a profundidade da raiz é zero). Não pode ser maior que 30.
+
+
+```{r}
+# construindo floresta com 100 arvores
+set.seed(23)
+modelo = randomForest(type ~ ., data=spam, ntree=100)
+# observando o comportamento do erro em 100 árvores
+erro_OOB <- data.frame(
+  Arvores=rep(1:nrow(modelo$err.rate), times=2),
+  Type=rep(c("spam", "nonspam"), each=nrow(modelo$err.rate)),
+  Erro=c(modelo$err.rate[,"spam"],
+          modelo$err.rate[,"nonspam"]))
+
+ggplot(data=erro_OOB, aes(x=Arvores, y=Erro)) +
+  geom_line(aes(color=Type),size=1.1)+
+  scale_colour_discrete(name = "Tipo",
+                         breaks = c("nonspam", "spam"),
+                         labels = c("Não Spam", "Spam"))
+```
 
 
 
+```{r}
+# construindo floresta com 1000 arvores
+set.seed(23)
+modelo = randomForest(type ~ ., data=spam, ntree=1000)
+# observando o comportamento do erro em 1000 árvores
+erro_OOB <- data.frame(
+  Arvores=rep(1:nrow(modelo$err.rate), times=2),
+  Type=rep(c("spam", "nonspam"), each=nrow(modelo$err.rate)),
+  Erro=c(modelo$err.rate[,"spam"],
+          modelo$err.rate[,"nonspam"]))
+
+ggplot(data=erro_OOB, aes(x=Arvores, y=Erro)) +
+  geom_line(aes(color=Type),size=1.1)+
+  scale_colour_discrete(name = "Tipo",
+                         breaks = c("nonspam", "spam"),
+                         labels = c("Não Spam", "Spam"))
+```
 
 
+
+Repare que após uma certa quantidade de árvores, o erro se estabiliza. Sendo assim, não é necessário utilizar grandes quantidades de árvores em todos os casos. É preciso verificar até onde existe ganho.
+
+
+
+### Construindo uma floresta com o [train()]{.red-text}
+
+
+Também é possivel fazer florestas aleatórias usando a função [train]{.red-text} do pacote [caret]{.red-text}. Para isso, é necessário alterar o método de reamostragem para *out of bag* e o método para “rf” (*random forest*). Vamos utilizar a base [wine]{.red-text}, construiremos um regressor para predizer a variável [alcohol]{.red-text}.
+
+
+
+```{r}
+# alterando o metodo de reamostragem
+controle = trainControl(method="oob")
+# chamando a base
+library(readr)
+wine = read_csv2("winequality-red.csv")
+# construindo o modelo com 50 arvores
+set.seed(534)
+modelo = caret::train(alcohol ~ ., data=wine, method="rf", ntree=50, trControl=controle)
+modelo
+```
+
+
+
+Note o valor “[mtry]{.red-text}” no modelo. Ele indica a quantidade de váriaveis da base que foram utilizadas para treinar o modelo. Repare que ele calcula a RMSE e $R^2$ para diferentes quantidades de variáveis usadas e utiliza no final a quantidade que possuir menor RMSE, no caso mtry=11. Caso queira fixar o número de variáveis usadas, basta usar o seguinte comando.
+
+
+```{r}
+tng = expand.grid(.mtry=7)
+modelo = caret::train(alcohol∼., data=wine, method="rf", ntree=50, trControl=controle, tuneGrid=tng)
+modelo
+```
 
 
 
